--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" type="text/css" href={% static 'css/animsition.min.css' %}>
     <link rel="stylesheet" type="text/css" href={% static 'css/login.css' %}>
     <!--Login-->
-    <div id="particles-js">
-    <div class="container py-5 wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54" style="margin-top: 5%">
+    <div class="container py-5 wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54" style="margin-top: 5%; margin-left: 35%; position: absolute">
         <h2 class="login-h2"> Login </h2>
         <form method="POST">
             {% csrf_token %}
@@ -50,5 +49,7 @@
             account</a>.</p>
     </div>
     <script src={% static 'js/login.js' %}></script>
+    <script src={% static 'js/particles.js' %}></script>
+    <script src={% static 'js/app.js' %}></script>
 {% endblock %}
 </div>
