--- a/static/css/news.css
+++ b/static/css/news.css
@@ -12,6 +12,7 @@
     padding-left: 0;
     padding-right: 0;
     margin: 1% 5% 1%;
+    position: relative;
 }
 
 .newsimg {
@@ -33,11 +34,12 @@
     background: none;
     width: 100%;
     border: none;
+    padding: 0;
 }
 
 .detailbutton {
-    background: #28a745;
+    background: #1f7b34;
     color: white;
     font-weight: 600;
-    padding: 2% 0 2%;
+    padding: 1% 0 1%;
 }
