--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% load socialaccount %}
-{% include 'header.html' %}
+{% include 'essential/header.html' %}
 {% load crispy_forms_filters %}
 {% load static %}
 {% block content %}
@@ -55,7 +55,5 @@
         </p>
     </div>
     <script src={% static 'js/login.js' %}></script>
-    <script src={% static 'js/particles.js' %}></script>
-    <script src={% static 'js/app.js' %}></script>
+    {% include 'essential/footer.html' %}
 {% endblock %}
-</div>
