--- a/templates/password/password_reset.html
+++ b/templates/password/password_reset.html
@@ -1,6 +1,5 @@
-{% include 'header.html' %}
+{% include 'essential/header.html' %}
 {% block content %}
-
 	<!--Reset Password-->
 	<div class="container p-5" style="background: #FFFFFF">
   	 	<h2 class="font-weight-bold mt-3">Reset Password</h2>
