--- a/templates/password/password_reset_confirm.html
+++ b/templates/password/password_reset_confirm.html
@@ -1,9 +1,9 @@
-{% include 'header.html' %}
+{% include 'essential/header.html' %}
 {% block content %}
-  <!--Password Reset Confirm-->
+    <!--Password Reset Confirm-->
     <div class="container p-5" style="background: #FFFFFF">
-	    <h2 class="font-weight-bold mt-3">Password Reset Confirm</h2>
-		<hr>
+        <h2 class="font-weight-bold mt-3">Password Reset Confirm</h2>
+        <hr>
         <p>Please enter your new password.</p>
         <form method="POST">
             {% csrf_token %}
