--- a/templates/news.html
+++ b/templates/news.html
@@ -1,4 +1,4 @@
-{% include 'header.html' %}
+{% include 'essential/header.html' %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href={% static 'css/news.css' %}>
 <script src="https://code.responsivevoice.org/responsivevoice.js?key=8LhsoKGb"></script>
@@ -19,43 +19,41 @@
     <script type="text/javascript" src={% static 'speechRecog/speechRecognition.js' %}></script>
     {% csrf_token %}
     <div style="position: absolute">
-        {% if number != 0 %}
-            {% for n in news %}
-                <div class="container news-container clearfix">
-                    <button class="newsbutton" onclick=speakNews{{ n.id }}()>
-                        <img class="newsimg" src={{ n.imagelink }}>
-                        <br>
-                        <p class="text-center">
-                            <b> {{ n.heading }} </b>
-                        </p>
-                        <p class="text-center">{{ n.time }}
-                            &ensp;
-                            <i>
-                                <a target="_blank" href={{ n.newslink }}>-{{ n.papername }}</a>
-                            </i>
-                        </p>
-                    </button>
-                    <button class="newsbutton detailbutton" onclick=speakDetails{{ n.id }}()> বিস্তারিত</button>
-                </div>
-                <script>
-                    var isSpeaking = false;
 
-                    function speakDetails{{ n.id }}() {
-                        if (!isSpeaking) {
-                            text = "{{ n.details }}";
-                            responsiveVoice.speak(text, "Bangla Bangladesh Male", {pitch: 1}, {volume: 1.4});
-                            isSpeaking = true;
-                        } else if (isSpeaking) {
-                            responsiveVoice.cancel();
-                            isSpeaking = false;
-                        }
+        {% for n in news %}
+            <div class="container news-container clearfix">
+                <button class="newsbutton" onclick=speakNews{{ n.id }}()>
+                    <img class="newsimg" src={{ n.imagelink }}>
+                    <br>
+                    <p class="text-center">
+                        <b> {{ n.heading }} </b>
+                    </p>
+                    <p class="text-center">{{ n.time|date:"h:i A, j, N, Y" }}
+                        &ensp;
+                        <i>
+                            <a target="_blank" href={{ n.newslink }}>-{{ n.papername }}</a>
+                        </i>
+                    </p>
+                </button>
+                <button class="newsbutton detailbutton" onclick=speakDetails{{ n.id }}()> বিস্তারিত</button>
+            </div>
+            <script>
+                var isSpeaking = false;
+
+                function speakDetails{{ n.id }}() {
+                    if (!isSpeaking) {
+                        text = "{{ n.details }}";
+                        responsiveVoice.speak(text, "Bangla Bangladesh Male", {pitch: 1}, {volume: 1.4});
+                        isSpeaking = true;
+                    } else if (isSpeaking) {
+                        responsiveVoice.cancel();
+                        isSpeaking = false;
                     }
-                </script>
-            {% endfor %}
-        {% elif number == 0 %}
+                }
+            </script>
+        {% empty %}
             <h1 class="text-center" style="color: #ffffff">দুঃখিত। কোনো ফলাফল পাওয়া যায়নি</h1>
-    {% endif %}
+        {% endfor %}
     </div>
-    <script src={% static 'js/particles.js' %}></script>
-    <script src={% static 'js/app.js' %}></script>
 </div>
+{% include 'essential/footer.html' %}
