--- a/templates/password/password_reset_complete.html
+++ b/templates/password/password_reset_complete.html
@@ -1,11 +1,10 @@
-{% include 'header.html' %}
+{% include 'essential/header.html' %}
 {% block content %}
-  
-  <!--Password Reset Complete-->
+    <!--Password Reset Complete-->
     <div class="container p-4" style="background: #FFFFFF">
-	    <h2 class="font-weight-bold mt-3">Password reset complete</h2>
-		<hr>
-        <p>Your password has been set. You may go ahead and log in now.</p>                 
+        <h2 class="font-weight-bold mt-3">Password reset complete</h2>
+        <hr>
+        <p>Your password has been set. You may go ahead and log in now.</p>
         <a class="btn btn-primary" href= {% url 'login' %}>Log in</a>
     </div>
 
