--- a/templates/password/password_reset_done.html
+++ b/templates/password/password_reset_done.html
@@ -1,13 +1,12 @@
-{% include 'header.html' %}
+{% include 'essential/header.html' %}
 {% block content %}
-
-	<!--Password reset sent-->
-  	<h2 class="font-weight-bold mt-3" style="color: #FFFFFF">Password reset sent</h2>
-		<div style="background: #FFFFFF">
-            <p>We've emailed you instructions for setting your password, if an account exists with the email you entered.
-                You should receive them shortly.<br>If you don't receive an email, please make sure you've entered the
-                address you registered with, and check your spam folder.
-            </p>
+    <!--Password reset sent-->
+    <h2 class="font-weight-bold mt-3" style="color: #FFFFFF">Password reset sent</h2>
+    <div style="background: #FFFFFF">
+        <p>We've emailed you instructions for setting your password, if an account exists with the email you entered.
+            You should receive them shortly.<br>If you don't receive an email, please make sure you've entered the
+            address you registered with, and check your spam folder.
+        </p>
     </div>
 
 {% endblock %}
