--- a/templates/essential/footer.html
+++ b/templates/essential/footer.html
@@ -1,3 +1,3 @@
-{% load static %}
-<script src={% static 'js/particles.js' %}></script>
-<script src={% static 'js/app.js' %}></script>
+{#{% load static %}#}
+{#<script src={% static 'js/particles.js' %}></script>#}
+{#<script src={% static 'js/app.js' %}></script>#}
