--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
 {% include 'essential/header.html' %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href={% static 'css/news.css' %}>
-<body style="overflow: hidden">
-
+<body>
   <div class="container py-10 px-10 mx-0 min-w-full grid place-items-center">
-
     <button class="text-white border border-green-500 hover:bg-green-500 hover:text-white active:bg-green-600 px-8 py-3 rounded-full duration-150"
             type="button" id="capture" value="true">
         <i class="fas fa-heart"></i>
