worked on index and login page
Bug: [Social Login]

--- a/templates/essential/header.html
+++ b/templates/essential/header.html
@@ -5,13 +5,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href={% static 'favicon/favicon.png' %}>
         <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css" rel="stylesheet" type="text/css"/>
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
         <script src="https://cdn.tailwindcss.com"></script>
         <title> সমাচার </title>
     </head>
 {% endblock %}
 
-<body class="bg-[#243B55]">
+<body class="bg-[#243B55]" style="font-family: 'Poppins'">
 {% block navbar %}
     <br><br>
     <div class="navbar bg-base-100 w-11/12 h-20 md:h-24 rounded-lg m-auto">
