--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 {% include 'essential/header.html' %}
 {% load static %}
-<body>
-  <div class="container py-10 px-10 mx-0 min-w-full grid place-items-center">
-    <button class="text-white border border-green-500 hover:bg-green-500 hover:text-white active:bg-green-600 px-8 py-3 rounded-full duration-150"
+
+<div class="container py-48 px-10 mx-0 min-w-full grid place-items-center">
+    <button class="text-white text-xl border-4 border-green-500 hover:bg-green-500 hover:text-white active:bg-green-600 px-20 py-4 rounded-full duration-150"
             type="button" id="capture" value="true">
-        <i class="fas fa-heart"></i>
         বলুন
     </button>
 
@@ -20,4 +19,3 @@
     {% include 'essential/footer.html' %}
 
 </div>
-</body>
