--- a/templates/password/password_reset_complete.html
+++ b/templates/password/password_reset_complete.html
@@ -1,11 +1,21 @@
 {% include 'essential/header.html' %}
-{% block content %}
-    <!--Password Reset Complete-->
-    <div class="container p-4" style="background: #FFFFFF">
-        <h2 class="font-weight-bold mt-3">Password reset complete</h2>
-        <hr>
-        <p>Your password has been set. You may go ahead and log in now.</p>
-        <a class="btn btn-primary" href= {% url 'login' %}>Log in</a>
+
+{% block password_reset_complete %}
+    <div class="flex flex-col items-center justify-center">
+        <div class="bg-white shadow rounded-[.625rem] lg:w-1/3  md:w-1/2 w-full p-10 mt-16 mb-16">
+            <p class="text-2xl font-medium text-gray-800">Password reset complete</p>
+
+            <div class="w-full flex items-center justify-between py-5">
+                <hr class="w-full bg-gray-400">
+            </div>
+            <p>Your password has been set. You may go ahead and log in now.</p>
+            <div class="mt-8">
+                <a href="{% url 'login' %}" role="button" type="submit"
+                   class="text-sm font-semibold leading-2 text-white bg-sky-700 border rounded py-4 w-full focus:outline-none hover:bg-indigo-600">
+                    Login
+                </a>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
