--- a/templates/password/password_reset_done.html
+++ b/templates/password/password_reset_done.html
@@ -1,12 +1,21 @@
 {% include 'essential/header.html' %}
-{% block content %}
-    <!--Password reset sent-->
-    <h2 class="font-weight-bold mt-3" style="color: #FFFFFF">Password reset sent</h2>
-    <div style="background: #FFFFFF">
-        <p>We've emailed you instructions for setting your password, if an account exists with the email you entered.
-            You should receive them shortly.<br>If you don't receive an email, please make sure you've entered the
-            address you registered with, and check your spam folder.
-        </p>
-    </div>
 
+{% block password_reset_done %}
+    <div class="flex flex-col items-center justify-center">
+        <div class="bg-white shadow rounded-[.625rem] lg:w-1/3  md:w-1/2 w-full p-10 mt-16 mb-16">
+            <p class="text-2xl font-medium text-gray-800">Email Sent</p>
+
+            <div class="w-full flex items-center justify-between py-5">
+                <hr class="w-full bg-gray-400">
+            </div>
+
+            <p>
+                We've emailed you instructions for setting your password, if an account exists with the email you entered.
+                You should receive them shortly.
+                <br><br>
+                If you don't receive an email, please make sure you've entered the
+                address you registered with, and check your spam folder.
+            </p>
+        </div>
+    </div>
 {% endblock %}
