--- a/templates/password/password_reset.html
+++ b/templates/password/password_reset.html
@@ -1,15 +1,24 @@
 {% include 'essential/header.html' %}
-{% block content %}
-	<!--Reset Password-->
-	<div class="container p-5" style="background: #FFFFFF">
-  	 	<h2 class="font-weight-bold mt-3">Reset Password</h2>
-		<hr>
-		<p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
-        <form method="POST">
-            {% csrf_token %}
-            {{ password_reset_form }}
-            <button class="btn btn-primary" type="submit">Send email</button>
-        </form>
-  	</div> 
 
+{% block reset_password %}
+    <div class="flex flex-col items-center justify-center">
+        <div class="bg-white shadow rounded-[.625rem] lg:w-1/3  md:w-1/2 w-full p-10 mt-16 mb-16">
+            <p class="text-2xl font-medium text-gray-800">Reset Password</p>
+
+            <div class="w-full flex items-center justify-between py-5">
+                <hr class="w-full bg-gray-400">
+            </div>
+
+            <form method="POST">
+                {% csrf_token %}
+                {{ password_reset_form }}
+                <div class="mt-8">
+                    <button role="button" type="submit"
+                            class="text-sm font-semibold leading-2 text-white bg-sky-700 border rounded py-4 w-full focus:outline-none hover:bg-indigo-600">
+                        Next
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
