--- a/templates/essential/header.html
+++ b/templates/essential/header.html
@@ -10,6 +10,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" type="text/css"/>
         <script src="https://cdn.tailwindcss.com"></script>
         <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.6/dist/full.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src={% static 'speechRecog/speechRecognition.js' %}></script>
 
         <title> সমাচার </title>
     </head>
