--- a/templates/essential/header.html
+++ b/templates/essential/header.html
@@ -5,25 +5,25 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/png" href={% static 'favicon/favicon.png' %}>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js" type="text/javascript"></script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" type="text/css"/>
+        <link rel="icon" type="image/png" href={% static 'favicon/favicon.webp' %}>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" type="text/javascript"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" type="text/css"/>
         <script src="https://cdn.tailwindcss.com"></script>
-        <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.6/dist/full.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src={% static 'speechRecog/speechRecognition.js' %}></script>
+        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src={% static 'js/speech-recognition.js' %}></script>
 
         <title> সমাচার </title>
     </head>
 {% endblock %}
 
-<body class="bg-[#243B55]" style="font-family: 'Poppins'">
+<body class="bg-[#243B55]" style="font-family: 'Poppins',serif">
 {% block navbar %}
     <br><br>
     <div>
         <div class="navbar bg-base-100 w-11/12 h-20 md:h-24 rounded-lg m-auto">
             <div class="navbar-start">
                 <a href={% url 'Index' %}>
-                    <img class="w-40 md:w-52 h-16 md:h-20 rounded-lg md:rounded-[20px]" alt="সমাচার" src={% static 'logo.png' %}>
+                    <img class="w-40 md:w-52 h-16 md:h-20 rounded-lg md:rounded-[20px]" alt="সমাচার" src={% static 'logo.webp' %}>
                 </a>
             </div>
             <div class="navbar-end flex  space-x-1.5">
